--- a/web/src/components/Button/styles.css
+++ b/web/src/components/Button/styles.css
@@ -1,3 +1,15 @@
 .button{
     background-color: var(--black);
+    color: var(--white);
+    padding: 11px 48px;
+    border-radius: 8px;
+    text-align: center;
+    transition: background .2s;
+    filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.1));
+    cursor: pointer;
+}
+
+.button:hover{
+    background-color: var(--background-color);
+    color: var(--black);
 }
