--- a/web/src/components/Header/styles.css
+++ b/web/src/components/Header/styles.css
@@ -8,8 +8,15 @@
 
 .headerContainer{
     display: flex;
-    max-width: 1440px;
+    margin: 0 auto;
+    max-width: 95%;
     padding: 0 2rem;
     align-items: center;
+    height: 100%;
     justify-content: space-between;
+}
+
+.menuRight{
+    display: flex;
+    gap: 26px;
 }
