--- a/web/src/components/Header/styles.css
+++ b/web/src/components/Header/styles.css
@@ -1,22 +1,34 @@
-.headerBackground{
-    background-color: #FFF;
-    width: 100%;
-    height: 113px;
+.headerBackground {
+  background-color: #fff;
+  width: 100%;
+  height: 113px;
 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.01);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.01);
 }
 
-.headerContainer{
-    display: flex;
-    margin: 0 auto;
-    max-width: 95%;
-    padding: 0 2rem;
-    align-items: center;
-    height: 100%;
-    justify-content: space-between;
+.headerContainer {
+  display: flex;
+  margin: 0 auto;
+  max-width: 95%;
+  padding: 0 2rem;
+  align-items: center;
+  height: 100%;
+  justify-content: space-between;
 }
 
-.menuRight{
-    display: flex;
-    gap: 26px;
+.menuRight {
+  display: flex;
+  gap: 26px;
+}
+
+.button {
+  background-color: var(--black);
+  padding: 1rem;
+  color: var(--white);
+  border-radius: 4px;
+  transition: background 0.2s ease;
+}
+
+.button:hover {
+  background-color: #393939;
 }
