--- a/web/src/components/NewProduct/styles.css
+++ b/web/src/components/NewProduct/styles.css
@@ -1,87 +1,82 @@
-.newProductIntro{
-    margin: 5rem 0;
+.newProductIntro {
+  margin: 5rem 0;
 }
 
-.newProductTitle{
-    font-size: 3.2rem;
-    font-weight: 900;
-    text-align: center;
+.newProductTitle {
+  font-size: 3.2rem;
+  font-weight: 900;
+  text-align: center;
 }
 
-.newProductDescription{
-    font-size: 1.8rem;
-    text-align: center;
-    color: var(--gray);
+.newProductDescription {
+  font-size: 1.8rem;
+  text-align: center;
+  color: var(--gray);
 }
 
-form{
-    max-width: 50rem;
-    margin: 0 auto;
-
-    display: grid;
-    gap: 2rem;
+form {
+  max-width: 50rem;
+  margin-left: 4rem;
+  display: grid;
+  gap: 2rem;
 }
 
-form div{
-    display: flex;
+.form-row {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
 }
-.formField{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-}
-
-.formField label{
-    font-weight: 500;
-    font-size: 1.8rem;
+.form-field {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-
-.formField input, select{
-    padding: .4rem 2rem;
-    border: 2px solid var(--black);
-    border-radius: .4rem;
-    text-align: center;
-    width: 25rem;
-    height: 4rem;
+.form-field label {
+  font-weight: 500;
+  font-size: 1.8rem;
 }
 
-.formField input::placeholder{
-    font-style: italic;
+.form-field input,
+select {
+  padding: 0.4rem 2rem;
+  border: 2px solid var(--black);
+  border-radius: 0.4rem;
+  text-align: center;
+  width: 25rem;
+  height: 4rem;
 }
 
-.formButton{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 1rem;
-    margin-top: 2rem;
+.form-field input::placeholder {
+  font-style: italic;
 }
 
-.formButton button{
-    background-color: var(--black);
-    outline: none;
-    border: none;
-    width: 25rem;
-    padding: 1rem 4rem;
-    border-radius: .3rem;
-
-    font-size: 1.4rem;
-    color: var(--white);
-
-    margin: 0 auto;
+.form-button {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
 }
 
+.form-button button {
+  background-color: var(--black);
+  outline: none;
+  border: none;
+  width: 25rem;
+  padding: 1rem 4rem;
+  border-radius: 0.3rem;
 
+  font-size: 1.4rem;
+  color: var(--white);
+}
 
 /* Reset do input number */
-.formField input::-webkit-outer-spin-button,
+.form-field input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-.formField input[type=number]{
-    -moz-appearance: textfield;
+.form-field input[type="number"] {
+  -moz-appearance: textfield;
 }
