--- a/web/src/global.css
+++ b/web/src/global.css
@@ -1,22 +1,27 @@
-*{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: var(--background-color);
-    font-family: 'Inter', sans-serif;
-    font-size: 1.6rem;
+body {
+  background-color: var(--background-color);
+  font-family: "Inter", sans-serif;
+  font-size: 1.6rem;
 }
 
-:root{
-    font-size: 62.5%;
+:root {
+  font-size: 62.5%;
 
-    --white: #fff;
-    --black: #000;
-    --gray: #4B4B4B;
-    --background-color: #F1F3F4;
-    --primary-color: #EB9CFF;
+  --white: #fff;
+  --black: #000;
+  --gray: #4b4b4b;
+  --background-color: #f1f3f4;
+  --primary-color: #eb9cff;
+}
+
+.main-grid {
+  display: grid;
+  grid-template-columns: 280px 1fr;
 }
