--- a/web/src/components/Sidebar/styles.css
+++ b/web/src/components/Sidebar/styles.css
@@ -75,6 +75,7 @@
 
   /* box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%); */
   border-bottom: 1px solid #e9e9e9;
+  transition: background 0.3s ease;
 }
 
 .button a {
@@ -90,5 +91,5 @@
 }
 
 .button:hover {
-  box-shadow: none;
+  background-color: #e4e4e4a9;
 }
