--- a/web/src/components/Product/styles.css
+++ b/web/src/components/Product/styles.css
@@ -46,6 +46,8 @@
   align-items: center;
 
   border-bottom: solid #ececec 1px;
+
+  position: relative;
 }
 
 /* .productItem .productCategory {
@@ -60,4 +62,15 @@
 
   display: flex;
   justify-content: center;
+}
+
+.x-icon {
+  position: absolute;
+  left: -6rem;
+
+  width: 2.5rem;
+
+  background-color: rgba(255, 0, 0, 0.289);
+  border-radius: 50%;
+  padding: 0.4rem;
 }
