--- a/web/src/components/Sidebar/styles.css
+++ b/web/src/components/Sidebar/styles.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100vh;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.01);
+  border-right: 1px solid rgb(217, 217, 217);
 }
 
 .sidebar-top {
@@ -68,18 +69,18 @@
   align-items: center;
   justify-content: start;
   gap: 1rem;
-  width: 100%;
+  width: 90%;
   margin: 0 auto 1rem auto;
-  padding: 1rem 0;
+  padding: 1.5rem 0;
 
   background-color: var(--white);
-  border-radius: 8px;
+  border-radius: 20px;
   transition: background 0.3s ease;
 }
 
 .button a {
   color: var(--black);
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   width: 100%;
   text-align: left;
 }
