--- a/web/src/components/NewProduct/styles.css
+++ b/web/src/components/NewProduct/styles.css
@@ -2,12 +2,6 @@
   margin: 5rem 0;
 }
 
-.newProductTitle {
-  font-size: 3.2rem;
-  font-weight: 900;
-  text-align: center;
-}
-
 .newProductDescription {
   font-size: 1.8rem;
   text-align: center;
@@ -15,8 +9,9 @@
 }
 
 .new-product-container {
-  margin: 0 auto;
+  margin: 10rem auto 0 auto;
   max-width: 500px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,8 +20,6 @@
   background-color: #fff;
 
   border-radius: 0 0 0.4rem 0.4rem;
-
-  padding: 4rem;
 }
 
 .form-field {
