--- a/web/src/components/Sidebar/styles.css
+++ b/web/src/components/Sidebar/styles.css
@@ -7,32 +7,21 @@
 }
 
 .sidebar-top {
-  width: 90%;
-  display: grid;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
   margin: 0 auto;
-  text-align: center;
   font-size: 1.4rem;
 }
 
 .logo {
   /* background-color: #e44bd389; */
-  width: 100%;
-  height: 10rem;
+  width: 40%;
   border-radius: 1.5rem;
   object-fit: cover;
-  margin: 0 auto;
-  margin: 2rem auto;
-  padding: 1rem;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 2rem 0 0 2rem;
 }
 
 .sidebar-nav-item {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 .sidebar-nav-item span {
@@ -97,4 +86,12 @@
 
 .button:hover img {
   transform: scale(1.2);
+}
+
+.nav-active {
+  background-color: #e4e4e4a9;
+}
+
+.sidebar-nav-item .button.active {
+  font-weight: 500;
 }
