--- a/web/src/components/NewProduct/styles.css
+++ b/web/src/components/NewProduct/styles.css
@@ -1,36 +1,23 @@
-.newProductIntro {
-  margin: 5rem 0;
-}
-
-.newProductDescription {
-  font-size: 1.8rem;
-  text-align: center;
-  color: var(--gray);
-}
-
 .new-product-container {
   margin: 10rem auto 0 auto;
-  max-width: 500px;
-  height: 500px;
+  width: 800px;
+  height: 490px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3rem;
-
   background-color: #fff;
-
   border-radius: 0 0 0.4rem 0.4rem;
 }
 
 .form-field {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  margin-bottom: 3rem;
 }
 
 .form-field label {
   font-weight: 500;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
 }
 
 .form-field input,
@@ -40,10 +27,10 @@
 
 .form-field input,
 .form-field select {
-  padding: 0.4rem 1rem;
+  padding: 0.2rem 0.2rem;
   border-bottom: 2px solid var(--black);
   text-align: left;
-  width: 25rem;
+  width: 100%;
   height: 4rem;
 }
 
@@ -84,4 +71,8 @@ input::-webkit-inner-spin-button {
 
 .form-field input[type="number"] {
   -moz-appearance: textfield;
+}
+
+.form-row {
+  margin-top: 2rem;
 }
