--- a/web/src/components/Sidebar/styles.css
+++ b/web/src/components/Sidebar/styles.css
@@ -65,6 +65,11 @@
   background-color: var(--white);
   border-radius: 20px;
   transition: background 0.3s ease;
+  outline: none;
+  border: none;
+  font-size: 1.6rem;
+
+  cursor: pointer;
 }
 
 .button a {
@@ -72,6 +77,7 @@
   font-size: 1.6rem;
   width: 100%;
   text-align: left;
+
 }
 
 .button img {
